# CBVideoSearch

./: .gitignore  README.md  search.pgm  test.sift  基于内容的多线程视频处理与检索系统.docx
CBVideoSearch/: CBVideoSearch.sln  search.py  search.sift
CBVideoSearch/CBVideoSearch/: CBVideoSearch.cpp  CBVideoSearch.vcxproj  CBVideoSearch.vcxproj.filters  detector.cpp  detector.h  keyframes.cpp  keyframes.h  stdafx.h
CBVideoSearch/Debug/: CBVideoSearch.ilk
CBVideoSearch/imageRetrieval-master/: CMakeSettings.json
CBVideoSearch/include/: Trainer.cpp
CBVideoSearch/src/: detector.cpp  keyframes.cpp
Clusters/: BoWBuilder.cpp  CMakeLists.txt  test.cpp  test.txt
Clusters/Scripts/: Distributer.py  all_data.txt  raw_data.txt
Clusters/cppsugar/: cppsugar  cppsugar.autopkg  test.cpp
Clusters/include/: BoWBuilder.h  DictionaryBuilder.h  common_include.h  loadFile.h  omp_kmeans.h
Clusters/parallel-kmeans/: Makefile
Clusters/parallel-kmeans/Image_data/: afd.txt.cluster_centres  afd.txt.membership  color100.txt.cluster_centres  color100.txt.membership  color17695.nc  edge17695.nc  texture17695.nc
Clusters/src/: BoWBuilder.cpp  DictionaryBuilder.cpp  loadFile.cpp  test.cpp
CreateKDTree/: createKDTree.py  word.txt  word2.txt
DataSets/: DensityData.txt.cluster_centres  DensityData.txt.membership  getkeyframes_main.c  keyframe.py  sf.sift
Kmeans/: BoWBuilder.cpp  BoWBuilder.h  BoWBulider.cpp  loadFile.cpp  main.c  test.c
SiftsDes/: convert.py  getsift.c  getsift_main.c
pythonScripts/: keyframe.py  sift.py  tmp.pgm
pythontest/: keyframe.py  retrieval.py
(+603 files in other folders)
